API(access_logs): meta部とdata部を分離
ついでにmeta部のプロパティが常に存在する(undefinedでない)ようにした
