# docs/OpenAPI/ams-backend-nodejs.yml
@@ -42,10 +42,11 @@ paths:
                 type:
                   $ref: "#/components/schemas/Page"
                 example:
-                  page: 2
-                  next_page: "http://localhost:3000/v1/access_logs?page=3"
-                  prev_page: "http://localhost:3000/v1/access_logs?page=1"
-                  total_page: 15
+                  meta:
+                    page: 2
+                    next_page: "http://localhost:3000/v1/access_logs?page=3"
+                    prev_page: "http://localhost:3000/v1/access_logs?page=1"
+                    total_page: 15
                   data:
                     - user_id: 1
                       entered_at: "2021-02-23T16:57:39.000Z"
@@ -164,14 +165,15 @@ components:
     Page:
       type: object
       properties:
-        page:
-          type: integer
-        next_page:
-          type: string
-        prev_page:
-          type: string
-        total_page:
-          type: integer
+        meta:
+          page:
+            type: integer
+          next_page:
+            type: string
+          prev_page:
+            type: string
+          total_page:
+            type: integer
         data:
           type: array
           items:
